# fira_hackathon_gazebo

./: CMakeLists.txt  package.xml  q
data/: challenge1.csv  challenge1_waypoints.csv  challenge1_waypoints.geojson  challenge1_waypoints_01.csv  challenge1_waypoints_01.geojson  challenge1_waypoints_01.json  challenge1_waypoints_evaluation.csv  challenge1_waypoints_evaluation.geojson  challenge1_waypoints_evaluation.json  challenge2.csv  challenge3.csv
msg/: ObstacleDetection.msg
scripts/: export_models_position  generate_csv_from_world.py  generate_csv_from_xy.py  generate_data_from_world  generate_obstacles_info
worlds/: challenge1_evaluation.world  challenge2_evaluation.world  challenge3_evaluation.world  farm_evaluation.world  farm_final.world  farm_vineyard_crops_challenge1.world  farm_vineyard_crops_challenge2.world  farm_vineyard_crops_challenge3.world
